--- a/index.html
+++ b/index.html
@@ -51,11 +51,36 @@
 
     
     <section id="navbar-1">
-        <button class="bg-color" onclick="myFunc()" ondblclick="MYFUNC2()">
-            <i class="fa-solid fa-ellipsis"></i>
-        </button>
-            <!-- hover-text -->
-        <p class="hide-2">Theme</p>
+        <div class="straight-bar">
+
+            <button class="bg-color" onclick="myFunc()" ondblclick="MYFUNC2()">
+                <i class="fa-solid fa-ellipsis"></i>
+            </button>
+                <!-- hover-text -->
+            <p class="hide-2">Theme</p>
+
+            <button class="sign-in">Sign Up</button>
+        </div>
+            <!--  -->
+        <div id="page">
+            <h2 class="login-head">Login Page</h2>
+            <div class="matter11">
+                <p class="name1">Username:</p>
+                <input class="inp01" type="text" placeholder="Username">
+            </div>
+
+            <div class="matter22">
+                <p class="name1"> Mail Id:</p>
+                <input class="inp01" type="mail" placeholder="mail">
+            </div>
+
+            <div class="matter33">
+            <p><input type="checkbox">Remembering me</p>
+            <input class="submit-btn" type="submit" >
+            </div>
+        </div>
+
+
 
                 <!-- hover -COLORS-->
          <div class="color1-image">
