--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="navbar-1">
         <div class="straight-bar">
 
-            <button class="bg-color" onclick="myFunc()" ondblclick="MYFUNC2()">
+            <button class="bg-color" >
                 <i class="fa-solid fa-ellipsis"></i>
             </button>
                 <!-- hover-text -->
@@ -62,7 +62,7 @@
             <button class="sign-in">Sign Up</button>
         </div>
             <!--  -->
-        <div id="page">
+        <div class="page">
             <h2 class="login-head">Login Page</h2>
             <div class="matter11">
                 <p class="name1">Username:</p>
@@ -83,7 +83,7 @@
 
 
                 <!-- hover -COLORS-->
-         <div class="color1-image">
+         <div class="c-container">
             <div class="part-a">
             <img  class="color-1" height="50px" width="50px" onclick="mytheme1()" src="image1.png" >
             <img  class="color" height="50px" width="50px" onclick="mytheme2()"  src="image2.png" >
