--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
                 <!-- hover -COLORS-->
-         <div class="c-container">
+         <div class="color-container">
             <div class="part-a">
             <img  class="color-1" height="50px" width="50px" onclick="mytheme1()" src="image1.png" >
             <img  class="color" height="50px" width="50px" onclick="mytheme2()"  src="image2.png" >
